--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                     <td class="Probability"><center><a href="https://zoom.us/j/99550094221?pwd=cGlUU09PYUhmcit4Wisxb3poS3ppdz09">Probability</a></center></td>
                     
                     <td></td>
-                    <td class="LS"><center>Life Science</center></td>
+                    <td class="LS"><center><a href = "https://zoom.us/j/99828286525?pwd=T3k0OHpPemV3c09rTnBzVSt2bTIvdz09">Life Science</a></center></td>
                 </tr>
             </table>
         </center>
