--- a/index.html
+++ b/index.html
@@ -82,10 +82,10 @@
                     <td class="LTM"><center><a href="https://zoom.us/j/98731721374?pwd=SlllTXpHL3NIaTJvRW8wZFg4SzM3Zz09" target ="blank">LTM</a></center></td>
                     <td></td>
                     <td></td>
-                    <td class="Probability"><center><a href="https://zoom.us/j/99550094221?pwd=cGlUU09PYUhmcit4Wisxb3poS3ppdz09">Probability</a></center></td>
+                    <td class="Probability"><center><a href="https://zoom.us/j/99550094221?pwd=cGlUU09PYUhmcit4Wisxb3poS3ppdz09" target="_blank">Probability</a></center></td>
                     
                     <td></td>
-                    <td class="LS"><center><a href = "https://zoom.us/j/99828286525?pwd=T3k0OHpPemV3c09rTnBzVSt2bTIvdz09">Life Science</a></center></td>
+                    <td class="LS"><center><a href = "https://zoom.us/j/99828286525?pwd=T3k0OHpPemV3c09rTnBzVSt2bTIvdz09" target ="_blank">Life Science</a></center></td>
                 </tr>
             </table>
         </center>
